bug squashing part 1

--- a/css/specifics.less
+++ b/css/specifics.less
@@ -66,7 +66,7 @@ a.flip-container {
     margin: 0vh 3vh;
     padding: 10vh 2vh 0vh 2vh;
     vertical-align: middle;
-    border: 2px solid white;
+    /*border: 2px solid white;*/
     cursor:pointer;
     transition: width 0.5s;
     -webkit-transition: width 0.5s;
@@ -174,21 +174,23 @@ table#searchResults td:nth-child(2) {
 #answer {
 	background-size: 15%;
 	background-repeat: no-repeat;
-	background-position-x: 260px;
+	background-position-x: 230px;
 }
 
 #post-quiz {
 	display: none;
-	width: 45vw;
-	height: 60vh;
+	width: 40vw;
+	height: 40vh;
 	background-color: @c5;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 40vh;
+	margin-top: 15vh;
 	transition: transform 1s;
 	-webkit-transition: -webkit-transform 1s;
-	transform: rotateX(360deg) scale(-45,-60);
-	-webkit-transform: rotateX(360deg) scale(-45,-60);
+	font-size: 10em;
+	text-align: center;
+	padding-top: 10vh;
+
 }
 
 .expandAndFlip {
